flux/clusters/management/apps/cnpg-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: cloudnative-pg
  name: cnpg-system
