flux/clusters/management/apps/cnpg-system/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cnpg-webhook-service
  namespace: cnpg-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app.kubernetes.io/name: cloudnative-pg
